ExprParser.java
// Generated from ExprParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FOR=1, FROM=2, TO=3, DO=4, ENDDO=5, STEP=6, IF=7, THEN=8, ELSE=9, ENDIF=10, 
		FUNCION=11, VOID=12, INCLUDE=13, BEGIN=14, END=15, NUMERO=16, CADENA=17, 
		WHILE=18, TRUE=19, FALSE=20, DEVOLVER=21, DEFAULT=22, IDENTIFICADOR=23, 
		OPERACION=24, NEWLINE=25, TAB=26, INT=27, FLOTANTE=28, STRING=29, MULT=30, 
		DIV=31, SUM=32, RES=33, NOT=34, MENOR=35, MAYOR=36, DISTINTO=37, IGUALES=38, 
		IGUALDEASIGNACION=39, AND=40, OR=41, DOSPUNTOS=42, COMA=43, PUNTOYCOMA=44, 
		AB=45, CB=46, AP=47, CP=48, ESC=49, COMENTARIOLINEA=50, COMENTARIOBLOQUE=51, 
		WS=52;
	public static final int
		RULE_axioma = 0, RULE_tipo = 1, RULE_include = 2, RULE_cabecerafuncion = 3, 
		RULE_cuerpofuncion = 4, RULE_devolver = 5, RULE_llamadafuncion = 6, RULE_cuerpoif = 7, 
		RULE_cuerpobuclewhile = 8, RULE_bucle_for = 9, RULE_cabecera_for = 10, 
		RULE_expr = 11, RULE_expr_array = 12, RULE_codigo = 13, RULE_sentencia_unica = 14, 
		RULE_declaracion = 15, RULE_declaracion_array = 16, RULE_asignacion = 17, 
		RULE_asignacion_array = 18, RULE_booleano = 19, RULE_for_key = 20, RULE_from_key = 21, 
		RULE_to_key = 22, RULE_do_key = 23, RULE_enddo_key = 24, RULE_step_key = 25, 
		RULE_include_key = 26, RULE_identificador_tok = 27, RULE_numero_key = 28, 
		RULE_cadena_key = 29, RULE_void_key = 30, RULE_begin_key = 31, RULE_end_key = 32, 
		RULE_coma_tok = 33, RULE_dospuntos_tok = 34, RULE_funcion_key = 35, RULE_int_tok = 36, 
		RULE_string_tok = 37, RULE_while_key = 38, RULE_igualdeasignacion_tok = 39, 
		RULE_devolver_key = 40, RULE_mult_tok = 41, RULE_div_tok = 42, RULE_sum_tok = 43, 
		RULE_res_tok = 44, RULE_not_tok = 45, RULE_mayor_tok = 46, RULE_menor_tok = 47, 
		RULE_iguales_tok = 48, RULE_distinto_tok = 49, RULE_and_tok = 50, RULE_or_tok = 51, 
		RULE_if_key = 52, RULE_then_key = 53, RULE_else_key = 54, RULE_endif_key = 55, 
		RULE_abrir_bracket_tok = 56, RULE_cerrar_bracket_tok = 57, RULE_abrir_parentesis_tok = 58, 
		RULE_cerrar_parentesis_tok = 59, RULE_finaldelinea_key = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"axioma", "tipo", "include", "cabecerafuncion", "cuerpofuncion", "devolver", 
			"llamadafuncion", "cuerpoif", "cuerpobuclewhile", "bucle_for", "cabecera_for", 
			"expr", "expr_array", "codigo", "sentencia_unica", "declaracion", "declaracion_array", 
			"asignacion", "asignacion_array", "booleano", "for_key", "from_key", 
			"to_key", "do_key", "enddo_key", "step_key", "include_key", "identificador_tok", 
			"numero_key", "cadena_key", "void_key", "begin_key", "end_key", "coma_tok", 
			"dospuntos_tok", "funcion_key", "int_tok", "string_tok", "while_key", 
			"igualdeasignacion_tok", "devolver_key", "mult_tok", "div_tok", "sum_tok", 
			"res_tok", "not_tok", "mayor_tok", "menor_tok", "iguales_tok", "distinto_tok", 
			"and_tok", "or_tok", "if_key", "then_key", "else_key", "endif_key", "abrir_bracket_tok", 
			"cerrar_bracket_tok", "abrir_parentesis_tok", "cerrar_parentesis_tok", 
			"finaldelinea_key"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'for'", "'from'", "'to'", "'do'", "'enddo'", "'step'", "'if'", 
			"'then'", "'else'", "'endif'", "'function'", "'void'", "'include'", "'begin'", 
			"'end'", "'numero'", "'cadena'", "'while'", "'true'", "'false'", "'devolver'", 
			"'default'", null, null, null, null, null, null, null, "'*'", "'/'", 
			"'+'", "'-'", "'!'", "'<'", "'>'", "'!='", "'=='", "':='", "'&&'", "'||'", 
			"':'", "','", "';'", "'['", "']'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FOR", "FROM", "TO", "DO", "ENDDO", "STEP", "IF", "THEN", "ELSE", 
			"ENDIF", "FUNCION", "VOID", "INCLUDE", "BEGIN", "END", "NUMERO", "CADENA", 
			"WHILE", "TRUE", "FALSE", "DEVOLVER", "DEFAULT", "IDENTIFICADOR", "OPERACION", 
			"NEWLINE", "TAB", "INT", "FLOTANTE", "STRING", "MULT", "DIV", "SUM", 
			"RES", "NOT", "MENOR", "MAYOR", "DISTINTO", "IGUALES", "IGUALDEASIGNACION", 
			"AND", "OR", "DOSPUNTOS", "COMA", "PUNTOYCOMA", "AB", "CB", "AP", "CP", 
			"ESC", "COMENTARIOLINEA", "COMENTARIOBLOQUE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExprParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AxiomaContext extends ParserRuleContext {
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<CuerpofuncionContext> cuerpofuncion() {
			return getRuleContexts(CuerpofuncionContext.class);
		}
		public CuerpofuncionContext cuerpofuncion(int i) {
			return getRuleContext(CuerpofuncionContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public AxiomaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axioma; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitAxioma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AxiomaContext axioma() throws RecognitionException {
		AxiomaContext _localctx = new AxiomaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_axioma);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCION) | (1L << VOID) | (1L << INCLUDE) | (1L << NUMERO) | (1L << CADENA))) != 0)) {
				{
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INCLUDE:
					{
					setState(122);
					include();
					}
					break;
				case FUNCION:
					{
					setState(123);
					cuerpofuncion();
					}
					break;
				case VOID:
				case NUMERO:
				case CADENA:
					{
					setState(124);
					declaracion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public Numero_keyContext numero_key() {
			return getRuleContext(Numero_keyContext.class,0);
		}
		public Cadena_keyContext cadena_key() {
			return getRuleContext(Cadena_keyContext.class,0);
		}
		public Void_keyContext void_key() {
			return getRuleContext(Void_keyContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tipo);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				numero_key();
				}
				break;
			case CADENA:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				cadena_key();
				}
				break;
			case VOID:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				void_key();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public Include_keyContext include_key() {
			return getRuleContext(Include_keyContext.class,0);
		}
		public Identificador_tokContext identificador_tok() {
			return getRuleContext(Identificador_tokContext.class,0);
		}
		public Finaldelinea_keyContext finaldelinea_key() {
			return getRuleContext(Finaldelinea_keyContext.class,0);
		}
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitInclude(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			include_key();
			setState(136);
			identificador_tok();
			setState(137);
			finaldelinea_key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CabecerafuncionContext extends ParserRuleContext {
		public Funcion_keyContext funcion_key() {
			return getRuleContext(Funcion_keyContext.class,0);
		}
		public List<Identificador_tokContext> identificador_tok() {
			return getRuleContexts(Identificador_tokContext.class);
		}
		public Identificador_tokContext identificador_tok(int i) {
			return getRuleContext(Identificador_tokContext.class,i);
		}
		public Abrir_parentesis_tokContext abrir_parentesis_tok() {
			return getRuleContext(Abrir_parentesis_tokContext.class,0);
		}
		public Cerrar_parentesis_tokContext cerrar_parentesis_tok() {
			return getRuleContext(Cerrar_parentesis_tokContext.class,0);
		}
		public Dospuntos_tokContext dospuntos_tok() {
			return getRuleContext(Dospuntos_tokContext.class,0);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<Coma_tokContext> coma_tok() {
			return getRuleContexts(Coma_tokContext.class);
		}
		public Coma_tokContext coma_tok(int i) {
			return getRuleContext(Coma_tokContext.class,i);
		}
		public CabecerafuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecerafuncion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitCabecerafuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabecerafuncionContext cabecerafuncion() throws RecognitionException {
		CabecerafuncionContext _localctx = new CabecerafuncionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cabecerafuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			funcion_key();
			setState(140);
			identificador_tok();
			setState(141);
			abrir_parentesis_tok();
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << NUMERO) | (1L << CADENA))) != 0)) {
				{
				setState(142);
				tipo();
				{
				setState(143);
				identificador_tok();
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(144);
					coma_tok();
					{
					setState(145);
					tipo();
					{
					setState(146);
					identificador_tok();
					}
					}
					}
					}
					setState(152);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
			}

			setState(155);
			cerrar_parentesis_tok();
			setState(156);
			dospuntos_tok();
			setState(157);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpofuncionContext extends ParserRuleContext {
		public CabecerafuncionContext cabecerafuncion() {
			return getRuleContext(CabecerafuncionContext.class,0);
		}
		public Begin_keyContext begin_key() {
			return getRuleContext(Begin_keyContext.class,0);
		}
		public End_keyContext end_key() {
			return getRuleContext(End_keyContext.class,0);
		}
		public CodigoContext codigo() {
			return getRuleContext(CodigoContext.class,0);
		}
		public List<CuerpofuncionContext> cuerpofuncion() {
			return getRuleContexts(CuerpofuncionContext.class);
		}
		public CuerpofuncionContext cuerpofuncion(int i) {
			return getRuleContext(CuerpofuncionContext.class,i);
		}
		public CuerpofuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpofuncion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitCuerpofuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CuerpofuncionContext cuerpofuncion() throws RecognitionException {
		CuerpofuncionContext _localctx = new CuerpofuncionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cuerpofuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			cabecerafuncion();
			setState(160);
			begin_key();
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(161);
				codigo();
				}
				break;
			case 2:
				{
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==FUNCION) {
					{
					{
					setState(162);
					cuerpofuncion();
					}
					}
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(170);
			end_key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DevolverContext extends ParserRuleContext {
		public Devolver_keyContext devolver_key() {
			return getRuleContext(Devolver_keyContext.class,0);
		}
		public Abrir_parentesis_tokContext abrir_parentesis_tok() {
			return getRuleContext(Abrir_parentesis_tokContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Cerrar_parentesis_tokContext cerrar_parentesis_tok() {
			return getRuleContext(Cerrar_parentesis_tokContext.class,0);
		}
		public Finaldelinea_keyContext finaldelinea_key() {
			return getRuleContext(Finaldelinea_keyContext.class,0);
		}
		public DevolverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_devolver; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitDevolver(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DevolverContext devolver() throws RecognitionException {
		DevolverContext _localctx = new DevolverContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_devolver);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			devolver_key();
			setState(173);
			abrir_parentesis_tok();
			setState(174);
			expr(0);
			setState(175);
			cerrar_parentesis_tok();
			setState(176);
			finaldelinea_key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LlamadafuncionContext extends ParserRuleContext {
		public Identificador_tokContext identificador_tok() {
			return getRuleContext(Identificador_tokContext.class,0);
		}
		public Abrir_parentesis_tokContext abrir_parentesis_tok() {
			return getRuleContext(Abrir_parentesis_tokContext.class,0);
		}
		public Cerrar_parentesis_tokContext cerrar_parentesis_tok() {
			return getRuleContext(Cerrar_parentesis_tokContext.class,0);
		}
		public Finaldelinea_keyContext finaldelinea_key() {
			return getRuleContext(Finaldelinea_keyContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<Coma_tokContext> coma_tok() {
			return getRuleContexts(Coma_tokContext.class);
		}
		public Coma_tokContext coma_tok(int i) {
			return getRuleContext(Coma_tokContext.class,i);
		}
		public LlamadafuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamadafuncion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitLlamadafuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LlamadafuncionContext llamadafuncion() throws RecognitionException {
		LlamadafuncionContext _localctx = new LlamadafuncionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_llamadafuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			identificador_tok();
			setState(179);
			abrir_parentesis_tok();
			{
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << IDENTIFICADOR) | (1L << INT) | (1L << STRING) | (1L << NOT) | (1L << AP))) != 0)) {
				{
				setState(180);
				expr(0);
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(181);
					coma_tok();
					setState(182);
					expr(0);
					}
					}
					setState(188);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
			setState(191);
			cerrar_parentesis_tok();
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(192);
				finaldelinea_key();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpoifContext extends ParserRuleContext {
		public If_keyContext if_key() {
			return getRuleContext(If_keyContext.class,0);
		}
		public Abrir_parentesis_tokContext abrir_parentesis_tok() {
			return getRuleContext(Abrir_parentesis_tokContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Cerrar_parentesis_tokContext cerrar_parentesis_tok() {
			return getRuleContext(Cerrar_parentesis_tokContext.class,0);
		}
		public Then_keyContext then_key() {
			return getRuleContext(Then_keyContext.class,0);
		}
		public Endif_keyContext endif_key() {
			return getRuleContext(Endif_keyContext.class,0);
		}
		public List<CodigoContext> codigo() {
			return getRuleContexts(CodigoContext.class);
		}
		public CodigoContext codigo(int i) {
			return getRuleContext(CodigoContext.class,i);
		}
		public Else_keyContext else_key() {
			return getRuleContext(Else_keyContext.class,0);
		}
		public CuerpoifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpoif; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitCuerpoif(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CuerpoifContext cuerpoif() throws RecognitionException {
		CuerpoifContext _localctx = new CuerpoifContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cuerpoif);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			if_key();
			setState(196);
			abrir_parentesis_tok();
			setState(197);
			expr(0);
			setState(198);
			cerrar_parentesis_tok();
			setState(199);
			then_key();
			{
			setState(200);
			codigo();
			}
			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(201);
				else_key();
				{
				setState(202);
				codigo();
				}
				}
			}

			setState(206);
			endif_key();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpobuclewhileContext extends ParserRuleContext {
		public While_keyContext while_key() {
			return getRuleContext(While_keyContext.class,0);
		}
		public Abrir_parentesis_tokContext abrir_parentesis_tok() {
			return getRuleContext(Abrir_parentesis_tokContext.class,0);
		}
		public Cerrar_parentesis_tokContext cerrar_parentesis_tok() {
			return getRuleContext(Cerrar_parentesis_tokContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Sentencia_unicaContext sentencia_unica() {
			return getRuleContext(Sentencia_unicaContext.class,0);
		}
		public CodigoContext codigo() {
			return getRuleContext(CodigoContext.class,0);
		}
		public List<Begin_keyContext> begin_key() {
			return getRuleContexts(Begin_keyContext.class);
		}
		public Begin_keyContext begin_key(int i) {
			return getRuleContext(Begin_keyContext.class,i);
		}
		public List<End_keyContext> end_key() {
			return getRuleContexts(End_keyContext.class);
		}
		public End_keyContext end_key(int i) {
			return getRuleContext(End_keyContext.class,i);
		}
		public CuerpobuclewhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpobuclewhile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitCuerpobuclewhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CuerpobuclewhileContext cuerpobuclewhile() throws RecognitionException {
		CuerpobuclewhileContext _localctx = new CuerpobuclewhileContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cuerpobuclewhile);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			while_key();
			setState(209);
			abrir_parentesis_tok();
			{
			setState(210);
			expr(0);
			}
			setState(211);
			cerrar_parentesis_tok();
			setState(226);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(212);
				sentencia_unica();
				}
				break;
			case 2:
				{
				{
				setState(216);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(213);
						begin_key();
						}
						} 
					}
					setState(218);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(219);
				codigo();
				setState(223);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(220);
						end_key();
						}
						} 
					}
					setState(225);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bucle_forContext extends ParserRuleContext {
		public Cabecera_forContext cabecera_for() {
			return getRuleContext(Cabecera_forContext.class,0);
		}
		public Enddo_keyContext enddo_key() {
			return getRuleContext(Enddo_keyContext.class,0);
		}
		public CodigoContext codigo() {
			return getRuleContext(CodigoContext.class,0);
		}
		public List<Begin_keyContext> begin_key() {
			return getRuleContexts(Begin_keyContext.class);
		}
		public Begin_keyContext begin_key(int i) {
			return getRuleContext(Begin_keyContext.class,i);
		}
		public List<End_keyContext> end_key() {
			return getRuleContexts(End_keyContext.class);
		}
		public End_keyContext end_key(int i) {
			return getRuleContext(End_keyContext.class,i);
		}
		public Bucle_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle_for; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprParserVisitor ) return ((ExprParserVisitor<? extends T>)visitor).visitBucle_for(this);
			else return visitor.visitChildren(this);
		}
	}
